# stamina-buyer

./: .gitignore  ADB_VS_SCREENCAPTURE.md  DISTRIBUTION.md  GUI_GUIDE.md  LICENSE  QUICKSTART.md  README.md  RELEASING.md  build_executable.py  debug_windows.py  launcher.py  pyproject.toml  rebuild.sh  staminabuyer.spec
.github/workflows/: build-releases.yml  test.yml
assets/: items.yaml
src/staminabuyer/: __init__.py  cli.py  config.py  gui.py  pipeline.py
src/staminabuyer/emulator/: adb.py  screen_capture.py
src/staminabuyer/vision/: __init__.py  matcher.py
tests/: conftest.py  test_anchor_calibration.py  test_bought_detection.py  test_config.py  test_end_to_end.py  test_full_blackmarket.py  test_item_priority.py  test_items_catalog.py  test_matcher_unit.py  test_normalization.py  test_purchase_state_machine.py  test_real_scenarios.py  test_screen_capture.py  test_screenshot_matching.py  test_vision_blackmarket.py
